hopefully fixing the horizontal scrolling issue and refining the front page load animations

--- a/assets/scss/mpowheard.scss
+++ b/assets/scss/mpowheard.scss
@@ -796,8 +796,8 @@ body {
 	overflow-x: hidden !important;
 	max-width:100vw;
 	div.container {
-		@media screen and (max-width:35.9375rem) {
-			overflow-x:hidden;
+		@media screen and (max-width:61.9375rem) {
+			overflow-x: hidden !important;
 		}
 	}
 	div.section-content {
